[package]
name = "mem-store-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
postcard = { version = "1.1.3", features = ["alloc"]}
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["net", "macros", "rt-multi-thread", "io-util"] }
tokio-stream = "0.1.18"
